--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
      <title>Document</title>
+     <link rel="titlesheet" 
  </head>
  <body>
-What is your name?
+     <div class ="container">
+         <div class = "name">
+                <a href = "https:google.com"> Joe </a>
+         </div>
+         <ul class = "full-navbar">
+            <li>
+                <a href="about.html"> About </a>
+            </li>
+            <li>
+                <a href="about.html"> joe's </a>
+            </li>
+            <li>
+                <a href="/pages/resume.html"> resume </a>
+            </li>
+         </ul>
+     </div>
+
+
  </body>
  </html>
