--- a/index.html
+++ b/index.html
@@ -1,30 +1,40 @@
- <!DOCTYPE html>
- <html lang="en">
- <head>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-     <title>Document</title>
-     <link rel="titlesheet" 
- </head>
- <body>
-     <div class ="container">
-         <div class = "name">
-                <a href = "https:google.com"> Joe </a>
-         </div>
-         <ul class = "full-navbar">
-            <li>
-                <a href="about.html"> About </a>
-            </li>
-            <li>
-                <a href="about.html"> joe's </a>
-            </li>
-            <li>
-                <a href="/pages/resume.html"> resume </a>
-            </li>
-         </ul>
-     </div>
-
-
- </body>
- </html>
+<!DOCTYPE html>
+<html>
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+   <title>RESUME</title>
+   <script src= "https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+   <script src="/assets/js/main.js"></script>
+   <link rel="stylesheet" type="text/css" href="/assets/css/index.css">
+</head>
+<body>
+   <div class ="container">   
+       <div class = "name">
+              <a href = "https://www.google.com/"> Jae Yeul Lee </a>
+       </div>
+       <div class ="navbar">
+           <u1 class = "navbar-btn">
+               <div class = "group-ham">
+                   <div class = "ham-menu"></div>
+                   <div class = "ham-menu"></div>
+                   <div class = "ham-menu"></div>
+               </div>
+           </u1>
+           <ul class = "full-navbar" id ="full-nav">
+          <li>
+              <a href="assets/pages/index.html"> About Me </a>
+          </li>
+          <li>
+              <a href="pages/resume.html"> Resume </a>
+          </li>
+          <li>
+              <a href="pages/portfolio.html"> Portfolio </a>
+          </li>
+          <li>
+              <a href='#'> Contact </a>
+          </li>
+       </ul>
+   </div>
+</body>
